# DocuChatAi

./: .gitignore  README.md  app.py  embed.py  get_vector_db.py  pyproject.toml  query.py
src/docuchatai/: embed.py  main.py  query.py  server.py
tests/: conftest.py  test_chat.py
