[project]
name = "docuchatai"
version = "0.1.0"
description = "Ollama와 Python을 활용한 RAG 기반 문서 질의응답 시스템"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "wonhyeok kim", email = "novatecoder@gmail.com" }
]

# 사용자가 제공한 리스트를 바탕으로 핵심 패키지 버전 고정
dependencies = [
    "flask==3.1.2",
    "flask-cors==6.0.1",
    "python-dotenv==1.1.1",
    "werkzeug==3.1.3",
    "langchain==0.3.27",
    "langchain-community==0.3.29",
    "langchain-ollama==0.3.7",
    "langchain-text-splitters==0.3.11",
    "chromadb==1.0.20",
    # PDF 처리를 위해 [all-docs] 옵션 유지, 버전은 리스트의 unstructured와 일치
    "unstructured[all-docs]==0.18.14", 
]

[project.scripts]
start-server = "docuchatai.main:main"

[dependency-groups]
dev = [
    # 테스트용 패키지는 보내주신 리스트에 없었지만, 
    # 테스트 실행을 위해 최신 버전으로 추가합니다.
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx==0.28.1"  # 리스트에 있는 버전 반영
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"